add implementation for URL extension

--- a/_posts/2022-10-06-【翻译】如何在 iOS 16 中获取系统文件夹的 URL.md
+++ b/_posts/2022-10-06-【翻译】如何在 iOS 16 中获取系统文件夹的 URL.md
@@ -50,3 +50,5 @@ let fileURL = try FileManager.default
         "myfile", isDirectory: false
     )
 ```
+
+> 译者注：为了在 iOS 16 之前使用这些 type properties，尝试对相应的属性进行了自定义的扩展实现，并编写通过了单元测试，代码见[GitHub => SwiftSugar => URL+Sugar](https://github.com/beforeold/SwiftSugar/blob/main/Sources/SwiftSugar/URL%2BSugar.swift)
